Fix overflow on debug

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
+html{
+	height:100%;
+}
+
 body{
         font-family: Monospace;
         background-color: #f0f0f0;
         margin: 0px;
         overflow: hidden;
+        height: 100%;
       }
 
 canvas{
@@ -42,6 +47,7 @@ canvas{
 	z-index: 1050;
 	font-size: 20px;
 	text-align:left;
+	overflow:scroll;
 }
 
 .button{
